--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.19.0",
+    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "node-sass": "^3.3.3",
     "sass-loader": "^3.0.0",
