--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.19.0",
+    "eslint": "^1.6.0",
+    "eslint-loader": "^1.1.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.2",
