--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simplified environmental build processes with react and webpack",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --no-info",
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot",
     "build": "./node_modules/webpack/bin/webpack.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/terryx/react-webpack#readme",
   "devDependencies": {
     "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.19.0",
     "eslint": "^1.6.0",
