--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/terryx/react-webpack#readme",
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
@@ -35,6 +36,7 @@
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.2",
     "node-sass": "^3.3.3",
+    "postcss-loader": "^0.6.0",
     "sass-loader": "^3.0.0",
     "strip-loader": "^0.1.0",
     "style-loader": "^0.12.4",
