--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "Simplified environmental build processes with react and webpack",
   "main": "index.js",
   "scripts": {
-    "build": "node ./build.js",
-    "production": "./node_modules/webpack/bin/webpack.js -p --config webpack.production.config.js",
-    "staging": "./node_modules/webpack/bin/webpack.js -p --config webpack.staging.config.js",
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.development.config.js --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node_modules/webpack/bin/webpack.js --config webpack.config.build.js",
+    "start": "node server.js",
+    "test": "NODE_ENV=test NODE_PATH=src/js node_modules/ava/cli.js test/specs/** --verbose"
   },
   "repository": {
     "type": "git",
@@ -26,26 +24,38 @@
   "homepage": "https://github.com/terryx/react-webpack#readme",
   "devDependencies": {
     "autoprefixer": "^6.0.3",
-    "babel-core": "^5.8.25",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
-    "css-loader": "^0.19.0",
-    "eslint": "^1.6.0",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "browser-sync": "^2.16.0",
+    "clean-webpack-plugin": "^0.1.10",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.5.0",
     "eslint-loader": "^1.1.0",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^1.6.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "http-proxy-middleware": "^0.17.1",
     "node-sass": "^3.3.3",
-    "postcss-loader": "^0.6.0",
-    "sass-loader": "^3.0.0",
+    "postcss-loader": "^0.13.0",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.3.0",
+    "sass-loader": "^4.0.2",
     "strip-loader": "^0.1.0",
-    "style-loader": "^0.12.4",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": "^1.12.0",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "babel-preset-es2016": "^6.11.3",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1"
   }
 }
