--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,10 @@
 {
-  "presets": ["react", "es2015","es2016"],
-  "env": {
-    "development": {
-      "plugins": [
-        ["react-transform", {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react"]
-          }]
-        }]
-      ]
-    }
-  }
+  "presets": [
+    ["es2015", {"modules": false}],
+    "es2016",
+    "react"
+  ],
+  "plugins": [
+    "react-hot-loader/babel"
+  ]
 }
