--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-webpack-simple-starter",
-  "version": "1.0.0",
+  "name": "react-webpack",
+  "version": "2.0.0",
   "description": "Simplified environmental build processes with react and webpack",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "build": "node_modules/webpack/bin/webpack.js --config webpack.config.build.js",
-    "start": "node server.js",
-    "test": "NODE_ENV=test NODE_PATH=src/js node_modules/ava/cli.js test/specs/** --verbose"
+    "prebuild": "rimraf dist",
+    "build": "NODE_ENV=production webpack",
+    "start": "NODE_ENV=development webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -23,39 +23,39 @@
   },
   "homepage": "https://github.com/terryx/react-webpack#readme",
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
-    "babel-core": "^6.14.0",
+    "autoprefixer": "^6.6.0",
+    "babel": "^6.5.2",
+    "babel-core": "^6.21.0",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "browser-sync": "^2.16.0",
-    "clean-webpack-plugin": "^0.1.10",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.14",
     "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.5.0",
-    "eslint-loader": "^1.1.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.12.2",
+    "eslint-loader": "^1.6.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "html-webpack-plugin": "^2.25.0",
     "http-proxy-middleware": "^0.17.1",
-    "node-sass": "^3.3.3",
+    "postcss-js": "^0.2.0",
     "postcss-loader": "^0.13.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.3.0",
-    "sass-loader": "^4.0.2",
-    "strip-loader": "^0.1.0",
+    "postcss-smart-import": "^0.6.6",
+    "precss": "^1.4.0",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0",
+    "webpack": "^2.2.0-rc.3",
+    "webpack-config-utils": "^2.3.0",
+    "webpack-dev-server": "^2.2.0-rc.0",
     "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
-    "babel-preset-es2016": "^6.11.3",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   }
 }
